"[FEAT] Added tracing with Zipkin and fixed the OrderService placeOrder error"